add swagger annotations for all routes
